src/test/ui/structs-enums/struct-rec/issue-74224.stderr
error[E0072]: recursive type `A` has infinite size
  --> $DIR/issue-74224.rs:1:1
   |
LL | struct A<T> {
   | ^^^^^^^^^^^ recursive type has infinite size
...
LL |     y: A<A<T>>,
   |        ------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `A` representable
   |
LL |     y: Box<A<A<T>>>,
   |        ^^^^       ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
